--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../static/styleIndex.css">
+    <title>Nossa Pizzaria</title>
 </head>
 <body>
-    <h1>Tela Login</h1>
+    <header>
 
-    <div id="form">
-        <form method="GET" action="">
-            Nome: <input name="nome" type="text"> <br>
-            Senha: <input name="password" type="password"> <br>
-            <button>ENVIAR</button>
-        </form>
-    </div>
+        <div>
+            <ul>
+                <li><a href="">Cardápio</a></li>
+                <li><a href="">Bebibas</a></li>
+                <li><a href="">Promoções</a></li>
+                <li><a href="">Contato</a></li>
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+            </ul>       
+        </div>
+    </header>
+
+
+    
 </body>
 </html>
