--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -16,7 +16,7 @@
             Email: <input name="email" type="email"> <br>
             Senha: <input name="password" type="password"> <br>
             <button>Salvar</button><br>
-            <a href=" {{ url_for('login') }} ">Voltar</a>
+            <a href=" {{ url_for('index') }} ">Voltar</a>
         </form>
     </div>
 </body>
